[package]
name = "image-duplicate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
image = "0.25.2"
image_hasher = "2.0.0"
md5 = "0.7.0"
permutator = "0.4.3"
rayon = "1.10.0"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = "1.0.210"
thiserror = "1.0.64"
